Update producer and consumer Dockerfiles